miyembro-aws-buildah-kubernetes-locally/services-miyembro-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-server
spec:
  selector:
    app: config-server
  ports:
    - name: http
      port: 8888
      targetPort: 8888
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: discovery-service
spec:
  selector:
    app: discovery-service
  ports:
    - name: http
      port: 8761
      targetPort: 8761
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: member-service
spec:
  selector:
    app: member-service
  ports:
    - name: http
      port: 8050
      targetPort: 8050
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: organization-service
spec:
  selector:
    app: organization-service
  ports:
    - name: http
      port: 8090
      targetPort: 8090
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway-service
  ports:
    - name: http
      port: 8222
      targetPort: 8222
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: angular-miyembro
spec:
  selector:
    app: angular-miyembro
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
spec:
  selector:
    app: zipkin
  ports:
    - name: http
      port: 9411
      targetPort: 9411
  type: ClusterIP
