miyembro-aws-buildah-kubernetes-locally/ingress-miyembro-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miyembro-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost  # or custom local domain like example.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-miyembro
                port:
                  number: 80
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: angular-miyembro
                port:
                  number: 80
          - path: /zipkin
            pathType: Prefix
            backend:
              service:
                name: zipkin
                port:
                  number: 9411
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8222
          - path: /member-service
            pathType: Prefix
            backend:
              service:
                name: member-service
                port:
                  number: 8050
          - path: /jenkins
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
