miyembro-aws-buildah-kubernetes-locally/ingress-miyembro-other-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miyembro-ingress-other
spec:
  ingressClassName: nginx
  rules:
    - host: localhost  # or custom local domain like example.local
      http:
        paths:
          - path: /eureka
            pathType: Prefix
            backend:
              service:
                name: discovery-service
                port:
                  number: 8761
          - path: /configserver
            pathType: Prefix
            backend:
              service:
                name: config-server
                port:
                  number: 8888
